[package]
name = "rust-web-with-rocket"
version = "0.1.0"
authors = ["Dan Newton <danknewton@hotmail.com>"]

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
url = "1.7.2"
polyval = "0.3.2"
generic-array = "0.13.2"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]